force-app/main/default/objects/Country_Region_BM_Entity_Mapping__c/Country_Region_BM_Entity_Mapping__c.object-meta.xml
<CustomObject>
    <label>Country - BM Entity Mapping</label>
    <nameField>
        <displayFormat>Map-{00000}</displayFormat>
        <label>Country - Region - BM Entity Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country - BM Entity Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>