force-app/main/default/objects/Country_Region_BM_Entity_Mapping__c/fields/Accounting_Email__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Email__c</fullName>
    <label>Accounting Email</label>
    <type>Email</type>
</CustomField>