force-app/main/default/objects/Country_Region_BM_Entity_Mapping__c/fields/BM_Entity__c.field-meta.xml
<CustomField>
    <fullName>BM_Entity__c</fullName>
    <label>BM Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BM_Entity</valueSetName>
    </valueSet>
</CustomField>