force-app/main/default/objects/Country_Region_BM_Entity_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fees_Approver__c</columns>
    <columns>Country__c</columns>
    <columns>BM_Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>